# lightning-on-hpc

./: README.md  requirements.txt
DataCollection/distributed/LUMI_LKOKKOS_VQE/: LUMI_LK_C2H4.ipynb  README.md  qchem.py  select_gpus  slurm-5943067.out  slurm-5948097.out  slurm-5950528.out  slurm-5959714.out  slurm-5992834.out  slurm-5995037.out  submit.slurm
DataCollection/distributed/Perlmutter_LGPU_MPI/: LightningGPUMPI.ipynb  README.md
DataCollection/distributed/Perlmutter_LGPU_MPI/sampling_results/: result.txt  run_bench_script_bk.sh  run_bench_script_sample.sh  test_sample_script.py
DataCollection/distributed/Perlmutter_LGPU_MPI/sel_gradient_results/: results.txt  run_bench_script_adj.sh  test_sel_adj.py
DataCollection/distributed/Perlmutter_LGPU_QAOA/: LightningGPU_Task_Based_Execution_Perlmutter.ipynb  README.md  requirements.txt
DataCollection/distributed/Perlmutter_LGPU_QAOA/QAOA_QCUT_BATCHED_CUDA12/: BATCHED.csv  Job-QCUT_BATCHED_16N_r3_n25_k2_l1.21839189.err  Job-QCUT_BATCHED_16N_r3_n25_k2_l1.21839189.out  Job-QCUT_BATCHED_1N_r3_n25_k2_l1.21839148.err  Job-QCUT_BATCHED_1N_r3_n25_k2_l1.21839148.out  Job-QCUT_BATCHED_2N_r3_n25_k2_l1.21839169.err  Job-QCUT_BATCHED_2N_r3_n25_k2_l1.21839169.out  Job-QCUT_BATCHED_32N_r3_n25_k2_l1.21839194.err  Job-QCUT_BATCHED_32N_r3_n25_k2_l1.21839194.out  Job-QCUT_BATCHED_4N_r3_n25_k2_l1.21839175.err  Job-QCUT_BATCHED_4N_r3_n25_k2_l1.21839175.out  Job-QCUT_BATCHED_64N_r3_n25_k2_l1.21839198.err  Job-QCUT_BATCHED_64N_r3_n25_k2_l1.21839198.out  Job-QCUT_BATCHED_8N_r3_n25_k2_l1.21839182.err  Job-QCUT_BATCHED_8N_r3_n25_k2_l1.21839182.out  common_utils.py  data_header.csv  gen_csv.sh  qaoa_workload_ray.py  submit_task.slurm
DataCollection/distributed/Perlmutter_LGPU_QAOA/QAOA_QCUT_ONDEMAND_CUDA12/: Job-QCUT_ONDEMAND_16N_r3_n25_k2_l1.21839125.err  Job-QCUT_ONDEMAND_16N_r3_n25_k2_l1.21839125.out  Job-QCUT_ONDEMAND_1N_r3_n25_k2_l1.21887972.err  Job-QCUT_ONDEMAND_1N_r3_n25_k2_l1.21887972.out  Job-QCUT_ONDEMAND_2N_r3_n25_k2_l1.21888038.err  Job-QCUT_ONDEMAND_2N_r3_n25_k2_l1.21888038.out  Job-QCUT_ONDEMAND_32N_r3_n25_k2_l1.21951689.err  Job-QCUT_ONDEMAND_32N_r3_n25_k2_l1.21951689.out  Job-QCUT_ONDEMAND_4N_r3_n25_k2_l1.21839106.err  Job-QCUT_ONDEMAND_4N_r3_n25_k2_l1.21839106.out  Job-QCUT_ONDEMAND_64N_r3_n25_k2_l1.21839137.err  Job-QCUT_ONDEMAND_64N_r3_n25_k2_l1.21839137.out  Job-QCUT_ONDEMAND_8N_r3_n25_k2_l1.21839113.err  Job-QCUT_ONDEMAND_8N_r3_n25_k2_l1.21839113.out  ONDEMAND.csv  qaoa_workload_ray.py  submit_task.slurm
DataCollection/single_node/GateKernels_LQUBIT/: README.md  run.sh
DataCollection/single_node/GateKernels_LQUBIT/data/: GatePerformanceSR.ipynb  process_csv.sh
DataCollection/single_node/GateKernels_LQUBIT/data/ProcOutputs/: header_1q.csv  header_2q.csv  output_CNOT.csv  output_CNOT_lqomp.csv  output_CNOT_lqomp_AVX2.csv  output_CNOT_lqomp_AVX512.csv  output_CNOT_lqomp_LM.csv  output_CNOT_lqompstream.csv  output_H.csv  output_H_lqomp.csv  output_H_lqompstream.csv  output_RX.csv  output_RX_lqomp.csv  output_RX_lqompstream.csv  proc_output_CNOT_lqompstream.csv  proc_output_H_lqompstream.csv  proc_output_RX_lqompstream.csv
DataCollection/single_node/GateKernels_LQUBIT/intelqs/: CMakeLists.txt  build_script.sh  sim.cpp  sim_CNOT.cpp  sim_CZ.cpp  sim_Hadamard.cpp  sim_IsingYY.cpp  sim_RX.cpp
DataCollection/single_node/GateKernels_LQUBIT/lightning_omp_kernel/: CMakeLists.txt  Dockerfile  build_script.sh  sim_CNOT.cpp  sim_CZ.cpp  sim_Hadamard.cpp  sim_IsingYY.cpp
DataCollection/single_node/GateKernels_LQUBIT/lightning_omp_kernel_stream/: CMakeLists.txt  build_script.sh  env_setup.sh  run_stream.sh  sim_RX.cpp
DataCollection/single_node/GateKernels_LQUBIT/lightning_omp_kernel_stream/data/: output_CNOT_lqomp.csv  output_H_lqomp.csv  output_RX_lqomp.csv
DataCollection/single_node/GateKernels_LQUBIT/quest/: CMakeLists.txt  build_script.sh  sim.cpp  sim_CNOT.cpp  sim_CZ.cpp  sim_Hadamard.cpp  sim_IsingYY.cpp  sim_RX.cpp
DataCollection/single_node/GateKernels_LQUBIT/qulacs/: CMakeLists.txt  build_script.sh  sim.cpp  sim_CNOT.cpp  sim_CZ.cpp  sim_Hadamard.cpp  sim_IsingYY.cpp  sim_RX.cpp
DataCollection/single_node/VQE/: genplot.py
DataCollection/single_node/VQE/lightning_gpu/: bench.py  lightning.gpu-data.txt  runall.sh
DataCollection/single_node/VQE/lightning_kokkos/: bench.py  lightning.kokkos-data.txt
DataCollection/single_node/VQE/lightning_kokkos_openmp/: bench.py  genplot.py  lightning.kokkos-1-data.txt  lightning.kokkos-16-data.txt  lightning.kokkos-2-data.txt  lightning.kokkos-32-data.txt  lightning.kokkos-4-data.txt  lightning.kokkos-8-data.txt  lightning.kokkos-data.txt  runall.sh
DataCollection/single_node/VQE/lightning_qubit/: bench.py  genplot.py  lightning.qubit-1-data.txt  lightning.qubit-16-data.txt  lightning.qubit-2-data.txt  lightning.qubit-32-data.txt  lightning.qubit-4-data.txt  lightning.qubit-8-data.txt  runall.sh
